--- a/website/index.html
+++ b/website/index.html
@@ -20,6 +20,7 @@
             <li class="link"><a href="#">Pricing</a></li>
             <li class="link"><a href="#">About</a></li>
         </ul>
+        <button class="btn">Hire Me</button>
     </nav>
     <script src="script.js"></script>
 </body>
