--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css"><!-- Lista projektów graficznych -->
-    <link rel="stylesheet" href="stytle.css">
+    <link rel="stylesheet" href="style.css">
     <title>Personal Portfolio</title>
 </head>
 <body>
@@ -22,6 +22,18 @@
         </ul>
         <button class="btn">Hire Me</button>
     </nav>
+    <header class="container">
+        <div class="container">
+            <span class="blur"></span>
+            <span class="blur"></span>
+            <h4>CREATE YOUR SITE LIKE A PRO</h4>
+            <h1>Hi, I'm <span>Marcin</span> Web Developer</h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et quidem, alias aliquid velit laboriosam corrupti accusantium voluptatum. Minus, eveniet aperiam quis architecto inventore mollitia, sed ratione cupiditate dignissimos maiores laboriosam!
+            </p>
+            <button class="btn">Get Started</button>
+        </div>
+    </header>
     <script src="script.js"></script>
 </body>
 </html>
