--- a/website/index.html
+++ b/website/index.html
@@ -33,6 +33,9 @@
             </p>
             <button class="btn">Get Started</button>
         </div>
+        <div class="image">
+            <img src=""
+        </div>
     </header>
     <script src="script.js"></script>
 </body>
