--- a/website/index.html
+++ b/website/index.html
@@ -34,7 +34,7 @@
             <button class="btn">Get Started</button>
         </div>
         <div class="image">
-            <img src=""
+            <img src="images/header.png">
         </div>
     </header>
     <script src="script.js"></script>
