--- a/website/index.html
+++ b/website/index.html
@@ -40,7 +40,7 @@
 
     <section class="container">
         <h2 class="header">OUR FEATURES</h2>
-        <div class="Features">
+        <div class="features">
             <div class="card">
                 <span><i class="ri-money-dollar-circle-line"></i>
                 </span>
@@ -50,7 +50,7 @@
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
         </div>
-        <div class="Features">
+        <div class="features">
             <div class="card">
                 <span><i class="ri-bug-line"></i>
                 </span>
@@ -60,7 +60,7 @@
                 </p>
                 <a href="#">Visit Now<i class="ri-arrow-right-fill"></i></a>
         </div>
-        <div class="Features">
+        <div class="features">
             <div class="card">
                 <span><i class="ri-history-line"></i>
                 </span>
