--- a/website/index.html
+++ b/website/index.html
@@ -46,7 +46,9 @@
                 </span>
                 <h4>Free Tutorials</h4>
                 <p>
-                    My tutorials in my Github "Marcinod89" are free and you don't need to pay enything.
+                    My tutorials in my Github 
+                    "Marcinod89" are free and you 
+                    don't need to pay enything.
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
         </div>
@@ -56,7 +58,8 @@
                 </span>
                 <h4>Fix Your Bugs</h4>
                 <p>
-                    You have any problem in your codes? Tell me, i will help you fix it.
+                    You have any problem in your codes?
+                     Tell me, i will help you fix it.
                 </p>
                 <a href="#">Visit Now<i class="ri-arrow-right-fill"></i></a>
         </div>
@@ -66,7 +69,8 @@
                 </span>
                 <h4>Guides on demand</h4>
                 <p>
-                    I can make guides for free and you don't need to pay anything.
+                    I can make guides for free
+                     and you don't need to pay anything.
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
         </div>
@@ -76,7 +80,8 @@
                 </span>
                 <h4>Cooperation</h4>
                 <p>
-                    If You want we work together. Write email to me.
+                    If You want we work together.
+                    Write email to me.
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
         </div>
