--- a/website/index.html
+++ b/website/index.html
@@ -74,7 +74,7 @@
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
         </div>
-        <div class="Features">
+        <div class="features">
             <div class="card">
                 <span><i class="ri-shake-hands-line"></i>
                 </span>
