--- a/website/index.html
+++ b/website/index.html
@@ -48,42 +48,42 @@
                 <p>
                     My tutorials in my Github 
                     "Marcinod89" are free and you 
-                    don't need to pay enything.
+                    don't need to pay anything.
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
-        </div>
-        <div class="features">
+            </div>
             <div class="card">
                 <span><i class="ri-bug-line"></i>
                 </span>
                 <h4>Fix Your Bugs</h4>
                 <p>
-                    You have any problem in your codes?
-                     Tell me, i will help you fix it.
-                </p>
-                <a href="#">Visit Now<i class="ri-arrow-right-fill"></i></a>
-        </div>
-        <div class="features">
-            <div class="card">
-                <span><i class="ri-history-line"></i>
-                </span>
-                <h4>Guides on demand</h4>
-                <p>
-                    I can make guides for free
-                     and you don't need to pay anything.
+                    Have any problem with your code? 
+                    Just email me.
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
-        </div>
-        <div class="features">
+            </div>
             <div class="card">
-                <span><i class="ri-shake-hands-line"></i>
+                <span><i class="ri-bug-line"></i>
                 </span>
-                <h4>Cooperation</h4>
+                <h4>Free Tutorials</h4>
                 <p>
-                    If You want we work together.
-                    Write email to me.
+                    My tutorials in my Github 
+                    "Marcinod89" are free and you 
+                    don't need to pay enything.
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
+            </div>
+            <div class="card">
+                <span><i class="ri-money-dollar-circle-line"></i>
+                </span>
+                <h4>Free Tutorials</h4>
+                <p>
+                    My tutorials in my Github 
+                    "Marcinod89" are free and you 
+                    don't need to pay enything.
+                </p>
+                <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
+            </div>
         </div>
     </section>
     
