--- a/website/index.html
+++ b/website/index.html
@@ -57,8 +57,7 @@
                 </span>
                 <h4>Fix Your Bugs</h4>
                 <p>
-                    Have any problem with your code? 
-                    Just email me.
+                    Have any problem with your code? asJust email me.
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
             </div>
