--- a/website/index.html
+++ b/website/index.html
@@ -47,8 +47,9 @@
                 <h4>Free Tutorials</h4>
                 <p>
                     My tutorials in my Github 
-                    "Marcinod89" are free and you 
-                    don't need to pay anything.
+                    "Marcinod89" are free.
+                    Check it out.
+                    
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
             </div>
@@ -57,29 +58,29 @@
                 </span>
                 <h4>Fix Your Bugs</h4>
                 <p>
-                    Have any problem with your code? asJust email me.
+                    Have any problem with your code?
+                    Need someting to fix?
+                    Just email me.
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
             </div>
             <div class="card">
-                <span><i class="ri-bug-line"></i>
+                <span><i class="ri-history-line"></i>
                 </span>
-                <h4>Free Tutorials</h4>
+                <h4>Freelance services</h4>
                 <p>
-                    My tutorials in my Github 
-                    "Marcinod89" are free and you 
-                    don't need to pay enything.
+                    I can help or make any project for you.
+                    Contact me on social media.
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
             </div>
             <div class="card">
-                <span><i class="ri-money-dollar-circle-line"></i>
+                <span><i class="ri-shake-hands-line"></i>
                 </span>
-                <h4>Free Tutorials</h4>
+                <h4>Cooperation</h4>
                 <p>
-                    My tutorials in my Github 
-                    "Marcinod89" are free and you 
-                    don't need to pay enything.
+                    If u want work together just email me:
+                    marcino19899@gmail.com
                 </p>
                 <a href="#">Visit Now <i class="ri-arrow-right-fill"></i></a>
             </div>
