--- a/website/index.html
+++ b/website/index.html
@@ -110,6 +110,52 @@
                 </div>
                 <button class="btn">Join Now</button>
             </div>
+            <div class="card">
+                <div class="content">
+                    <h4>Gold Plan</h4>
+                    <h3>10$</h3>
+                    <p>
+                        <i class="ri-checkbox-circle-line"></i>
+                        Pro codes 
+                    </p>
+                    <p>
+                        <i class="ri-checkbox-circle-line"></i>
+                        Smart coding plan 
+                    </p>
+                    <p>
+                        <i class="ri-checkbox-circle-line"></i>
+                        At home workouts 
+                    </p>
+                </div>
+                <button class="btn">Join Now</button>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <h4>Diamond Plan</h4>
+                    <h3>100$</h3>
+                    <p>
+                        <i class="ri-checkbox-circle-line"></i>
+                        Elite Classes & Courses
+                    </p>
+                    <p>
+                        <i class="ri-checkbox-circle-line"></i>
+                        Pro codes 
+                    </p>
+                    <p>
+                        <i class="ri-checkbox-circle-line"></i>
+                        Personal Coaching 
+                    </p>
+                    <p>
+                        <i class="ri-checkbox-circle-line"></i>
+                        Smart coding plan 
+                    </p>
+                    <p>
+                        <i class="ri-checkbox-circle-line"></i>
+                        At home workouts 
+                    </p>
+                </div>
+                <button class="btn">Join Now</button>
+            </div>
         </div>
     </section>
     
